--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!--We always use this domain so preconnect to it. See https://web.dev/uses-rel-preconnect-->
     <link rel="preconnect" href="https://europe-west1-crashy-9dd87.cloudfunctions.net">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
