--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <!--We always use this domain so preconnect to it. See https://web.dev/uses-rel-preconnect-->
     <link rel="preconnect" href="https://europe-west1-crashy-9dd87.cloudfunctions.net">
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
