--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--    <meta name="viewport" content="width=1920; user-scalable=0;" />-->
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
