--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,13 +15,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Formatted Minecraft crash reports"
+      content="{DESCRIPTION}"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href = "%PUBLIC_URL%/raw"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -31,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Crashy</title>
+    <title>{TITLE}</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
