--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!--We always use this domain so preconnect to it. See https://web.dev/uses-rel-preconnect-->
-    <link rel="preconnect" href="https://europe-west1-crashy-9dd87.cloudfunctions.net">
+    <link rel="prefetch" href="%PUBLIC_URL%/{ID}/raw">
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <link
             rel="stylesheet"
